--- a/02b-outlier-procedure-alt.qmd
+++ b/02b-outlier-procedure-alt.qmd
@@ -204,7 +204,7 @@ df_implicit_rt |>
 
 df_explicit_rt <- # from 8569 trials
   df_explicit_rt |> 
-  group_by(subjectid, congruence, color) |> 
+  group_by(subjectid, congruence) |> 
   mutate(
     rt_median = median(rt),
     rt_mad = mad(rt)
@@ -221,7 +221,7 @@ df_explicit_rt <- # from 8569 trials
 
 df_implicit_rt <- # from 8963 trials
   df_implicit_rt |> 
-  group_by(subjectid, congruence, color) |> 
+  group_by(subjectid, congruence) |> 
   mutate(
     rt_median = median(rt),
     rt_mad = mad(rt)
@@ -235,7 +235,6 @@ df_implicit_rt <- # from 8963 trials
 (count(df_implicit) - count(df_implicit_rt)) / count(df_implicit)
 # 8661 trials left, 10.4% out
 ```
-
 
 ```{r}
 # Examination of remaining trials
